--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PI Master - Home</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="resources/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/resources/favicon.ico">
 </head>
 <body>
     <h2 id="bar">
