--- a/learn.html
+++ b/learn.html
@@ -22,7 +22,7 @@
 
         <h1 class="mainTitle">Learn</h3>
 
-        <p class="mainText">Coming soon...</p>
+        <p class="mainText">Select digits</p>
 
     </div>
 </body>
